--- a/MQ2Main/ISXEQ.vcxproj
+++ b/MQ2Main/ISXEQ.vcxproj
@@ -74,7 +74,7 @@
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
     <PostBuildEvent>
-      <Command>$(SolutionDir)ISXEQ\PostBuild.bat "$(SolutionDir)" "$(TargetDir)" $(TargetName)</Command>
+      <Command>"$(SolutionDir)ISXEQ\PostBuild.bat" "$(SolutionDir)" "$(TargetDir)" $(TargetName)</Command>
     </PostBuildEvent>
     <PostBuildEvent>
       <Message>Copy files to release</Message>
