27 March 2014 by CyberTech - Refactor datatype definitions for MQ2 and ISEQ code     All datatypes are declared in one file (DataTypeList.h), one time, for both ISXEQ and MQ2.     Inheritance and Persistence are defined at the same time and location.     This will avoid the ISXEQ build breaking or falling behind when new datatypes are added to MQ2.     Additionally, it simplifies the code required for a new MQ2 datatype -- 1 line of code instead of 4 - Add missing MQ2DynamicZoneType to ISXEQ datatype definitions - Add missing MQ2DZMemberType to ISXEQ datatype definitions - Add missing MQ2EvolvingItemType to ISXEQ datatype definitions - Add missing MQ2FellowshipMemberType to ISXEQ datatype definitions - Add missing MQ2FellowshipType to ISXEQ datatype definitions - Add missing MQ2TaskMemberType to ISXEQ datatype definitions - Add missing MQ2TaskType to ISXEQ datatype definitions

--- a/MQ2Main/ISXEQ.vcxproj
+++ b/MQ2Main/ISXEQ.vcxproj
@@ -107,11 +107,11 @@
     <ClCompile Include="MQ2Windows.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DataTypeList.h" />
     <ClInclude Include="ISXEQ\ISXEQ.h" />
     <ClInclude Include="..\ISXEQClient.h" />
     <ClInclude Include="ISXEQ\ISXEQCommandList.h" />
     <ClInclude Include="ISXEQ\ISXEQCommands.h" />
-    <ClInclude Include="ISXEQ\ISXEQDataTypes.h" />
     <ClInclude Include="ISXEQ\ISXEQServices.h" />
     <ClInclude Include="ISXEQ\ISXEQTopLevelObjects.h" />
     <ClInclude Include="ISXEQ\ISXEQUtilities.h" />
