--- a/MQ2Main/MQ2Main.vcxproj
+++ b/MQ2Main/MQ2Main.vcxproj
@@ -167,6 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Blech\Blech.h" />
+    <ClInclude Include="DataTypeList.h" />
     <ClInclude Include="EQClasses.h" />
     <ClInclude Include="EQData.h" />
     <ClInclude Include="EQUIStructs.h" />
